# stellar-sim

./: CMakeLists.txt  build.sh  glad.c  sim.c
lib/GLAD/include/glad/: glad.h
res/shader/: particle.frag.glsl  particle.vert.glsl  quad.frag.glsl  quad.vert.glsl  test.comp.glsl
src/: global.h  sim.c
src/main/: file_util.c  file_util.h  start.c
src/renderer/: shader_util.c  shader_util.h  window_util.c  window_util.h
